I fixed the extra margin issue by removing the position: absolute section in some of the CSS, which means I can now move on to figuring out why there is some extra space on the left and right sides of the page along the footer.

--- a/styles/bottom.css
+++ b/styles/bottom.css
@@ -43,7 +43,7 @@
     padding-right: 20px;
     margin-top: 30px;
     margin-left: 50px;
-    margin-bottom: 2000px;
+    margin-bottom: 500px;
 }
 
 
