--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,8 +1,4 @@
 .footer-main {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
     width: 100%;
     height: 14%;
     background-color: black;
